--- a/index.html
+++ b/index.html
@@ -71,22 +71,22 @@
           </div> <!--end row-->
           <div class="row">
             <div class="col-12 col-lg-4">
-              <div class="card">
-                <span class="card__icon">icon</span>
+              <div class="card text-center text-lg-left">
+                <span class="card__icon ti-package"></span>
                 <h3 class="card__heading">Unique Design</h3>
                 <p class="card__text">Molestie lorem est faucibus faucibus erat phasellus placerat proin aptent</p>
               </div>
             </div>
             <div class="col-12 col-lg-4">
-              <div class="card">
-                <span class="card__icon">icon</span>
+              <div class="card text-center text-lg-left">
+                <span class="card__icon ti-mouse"></span>
                 <h3 class="card__heading">Unique Design</h3>
                 <p class="card__text">Molestie lorem est faucibus faucibus erat phasellus placerat proin aptent</p>
               </div>
             </div>
             <div class="col-12 col-lg-4">
-              <div class="card">
-                <span class="card__icon">icon</span>
+              <div class="card text-center text-lg-left">
+                <span class="card__icon ti-headphone-alt"></span>
                 <h3 class="card__heading">Unique Design</h3>
                 <p class="card__text">Molestie lorem est faucibus faucibus erat phasellus placerat proin aptent</p>
               </div>
@@ -127,14 +127,14 @@
               <div class="row"><!--end sub row-->
                 <div class="col-12 col-lg-6">
                   <div class="card text-center">
-                      <span class="card__icon">card icon</span>
+                      <span class="card__icon ti-pencil-alt"></span>
                       <h3 class="card__heading">Easy To Manage</h3>
                       <p class="card__text">Posuere porttitor justo ornare dictum ultricies enim imperdiet integer habitant.</p>
                   </div><!--end card-->
                 </div><!--end sub col-->
                 <div class="col-12 col-lg-6">
                   <div class="card text-center mt-lg-5">
-                    <span class="card__icon">card icon</span>
+                    <span class="card__icon ti-pencil-ruler"></span>
                     <h3 class="card__heading">Easy To Manage</h3>
                     <p class="card__text">Posuere porttitor justo ornare dictum ultricies enim imperdiet integer habitant.</p>
                 </div><!--end card-->
@@ -143,14 +143,14 @@
               <div class="row">
                 <div class="col-12 col-lg-6">
                   <div class="card text-center">
-                    <span class="card__icon">card icon</span>
+                    <span class="card__icon ti-cut"></span>
                     <h3 class="card__heading">Easy To Manage</h3>
                     <p class="card__text">Posuere porttitor justo ornare dictum ultricies enim imperdiet integer habitant.</p>
                 </div><!--end card-->
                 </div><!--end sub col-->
                 <div class="col-12 col-lg-6">
                   <div class="card text-center mt-lg-5">
-                    <span class="card__icon">card icon</span>
+                    <span class="card__icon ti-light-bulb"></span>
                     <h3 class="card__heading">Easy To Manage</h3>
                     <p class="card__text">Posuere porttitor justo ornare dictum ultricies enim imperdiet integer habitant.</p>
                 </div><!--end card-->
@@ -300,25 +300,18 @@
       <section class="section-client-logos p-5">
         <div class="container">
           <div class="col-12">
-            <div class="carousel slide" id="clientLogoCarousel" data-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="img/clients-logo/c-logo-1.png" alt="">
-                </div><!--end carousel-item-->
-                <div class="carousel-item">
-                  <img src="img/clients-logo/c-logo-2.png" alt="">
-                </div><!--end carousel-item-->
-                <div class="carousel-item">
-                  <img src="img/clients-logo/c-logo-3.png" alt="">
-                </div><!--end carousel-item-->
-                <div class="carousel-item">
-                  <img src="img/clients-logo/c-logo-4.png" alt="">
-                </div><!--end carousel-item-->
-                <div class="carousel-item">
-                  <img src="img/clients-logo/c-logo-5.png" alt="">
-                </div><!--end carousel-item-->
-              </div><!--end carousel-inner-->
-            </div><!--end carousel-->
+            <div class="multi-carousel">
+              <img src="img/clients-logo/c-logo-1.png" alt="">
+              <img src="img/clients-logo/c-logo-2.png" alt="">
+              <img src="img/clients-logo/c-logo-3.png" alt="">
+              <img src="img/clients-logo/c-logo-4.png" alt="">
+              <img src="img/clients-logo/c-logo-5.png" alt="">
+              <img src="img/clients-logo/c-logo-1.png" alt="">
+              <img src="img/clients-logo/c-logo-2.png" alt="">
+              <img src="img/clients-logo/c-logo-3.png" alt="">
+              <img src="img/clients-logo/c-logo-4.png" alt="">
+              <img src="img/clients-logo/c-logo-5.png" alt="">
+            </div>
           </div><!--end col-->
         </div><!--end container-->
       </section>
@@ -407,21 +400,21 @@
         <div class="row mt-5 mb-5">
           <div class="col-12 col-lg-6">
             <p class="footer-group__link">
-Copyright ©2019 All rights reserved | This template is made with  by Colorlib</p>
+Copyright ©2019 All rights reserved | This template is made with <span class="ti-heart"></span> by Colorlib</p>
           </div>
           <div class="col-12 col-lg-6">
-            <ul class="social-list d-flex justify-content-around">
+            <ul class="social-list d-flex  justify-content-center justify-content-lg-end">
               <li class="social-list__item">
-                <a href="#" class="social-list__link"> <span>icon</span> </a>
+                <a href="#" class="social-list__link ti-facebook card__icon"><span></span> </a>
               </li>
               <li class="social-list__item">
-                <a href="#" class="social-list__link"> <span>icon</span> </a>
+                <a href="#" class="social-list__link ti-twitter card__icon"><span></span></a>
               </li>
               <li class="social-list__item">
-                <a href="#" class="social-list__link"> <span>icon</span> </a>
+                <a href="#" class="social-list__link card__icon ti-instagram"> <span></span> </a>
               </li>
               <li class="social-list__item">
-                <a href="#" class="social-list__link"> <span>icon</span> </a>
+                <a href="#" class="social-list__link card__icon ti-github"> <span></span> </a>
               </li>
             </ul>
           </div>
