--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   </head>
   <body>
     <header class="header">
-      <nav class="navbar navbar-expand-lg top-navbar" id="navbar">
+      <nav class="navbar navbar-expand-lg top-navbar d-flex justify-content-lg-around"  id="navbar">
         <a href="#" class="navbar-brand">
           <img src="img/logo.png" class="w-100" alt="">
         </a>
-        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#headerNavContent">
+        <button type="button" class="navbar-toggler navbar-dark" data-toggle="collapse" data-target="#headerNavContent">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-end" id="#headerNavContent">
+        <div class="collapse navbar-collapse justify-content-end" id="headerNavContent">
           <ul class="navbar-nav top-navbar__list">
             <li class="nav-item top-navbar__item">
               <a href="#" class="nav-link active top-navbar__link">Home</a>
@@ -134,7 +134,7 @@
                 </div><!--end sub col-->
                 <div class="col-12 col-lg-6">
                   <div class="card text-center mt-lg-5">
-                    <span class="card__icon ti-pencil-ruler"></span>
+                    <span class="card__icon ti-ruler-pencil"></span>
                     <h3 class="card__heading">Easy To Manage</h3>
                     <p class="card__text">Posuere porttitor justo ornare dictum ultricies enim imperdiet integer habitant.</p>
                 </div><!--end card-->
