--- a/index.html
+++ b/index.html
@@ -421,9 +421,9 @@ Copyright ©2019 All rights reserved | This template is made with <span class="t
         </div><!--end row-->
       </div><!--end container-->
     </footer>
-    <script src="node_modules/jquery/dist/jquery.min.js" charset="utf-8"></script>
+    <!-- <script src="node_modules/jquery/dist/jquery.min.js" charset="utf-8"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js" charset="utf-8"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js" charset="utf-8"></script>
-    <script src="js/main.js" charset="utf-8"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js" charset="utf-8"></script> -->
+    <script src="js/main.min.js" charset="utf-8"></script>
   </body>
 </html>
